src/objects/ADB_Client_Mapping__mdt.object
<CustomObject>
    <description>Client Mapping</description>
    <fields>
        <fullName>cast_light_indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>cast_light_indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>client_name__c</fullName>
        <label>client_name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>policy__c</fullName>
        <label>policy</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>purchase_id__c</fullName>
        <label>purchase_id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>ADB Client Mapping</label>
    <pluralLabel>ADB Client Mapping</pluralLabel>
</CustomObject>